@startuml
class FIN {
~ double REQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITS
~ double TOTALCREDITS
~ double SELECTIVENEED
- ArrayList<Course> deptPartiallyRequired
~ double required
~ double partiallyRequired
~ double selective
+ void addRequire(String)
+ void addPartiallyRequired()
+ void requiredJudgement(ArrayList<Course>)
+ void selectiveJudgement(ArrayList<Course>)
+ void partiallyRequiredJudgement(ArrayList<Course>)
+ void generalRequirement(ArrayList<Course>)
+ void PERequirement()
+ void summarize()
}
class Main {
+ {static} String UTF8_BOM
+ {static} void main(String[])
+ {static} void encodingCSV(String)
- {static} String removeUTF8BOM(String)
+ {static} Department deptSelector(String)
}
class IB {
~ double REQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITS
~ double TOTALCREDITS
~ double SELECTIVENEED
- ArrayList<Course> deptPartiallyRequired
~ double required
~ double partiallyRequired
~ double selective
+ void addRequire(String)
+ void addPartiallyRequired()
+ void requiredJudgement(ArrayList<Course>)
+ void selectiveJudgement(ArrayList<Course>)
+ void partiallyRequiredJudgement(ArrayList<Course>)
+ void generalRequirement(ArrayList<Course>)
+ void PERequirement()
+ void summarize()
}
class MIS {
~ double REQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITSA
~ double PARTIALLYREQUIREDCREDITSB
~ double PARTIALLYREQUIREDCREDITSC
~ double TOTALCREDITS
~ double SELECTIVENEED
- ArrayList<Course> deptPartiallyRequired1
- ArrayList<Course> deptPartiallyRequired2
- ArrayList<Course> deptPartiallyRequired3
- ArrayList<Course> partiallyRequired1
- ArrayList<Course> partiallyRequired2
- ArrayList<Course> partiallyRequired3
~ double required
~ double partiallyRequiredCredits1
~ double partiallyRequiredCredits2
~ double partiallyRequiredCredits3
~ double selective
+ void addRequire(String)
+ void addPartiallyRequired()
+ void requiredJudgement(ArrayList<Course>)
+ void selectiveJudgement(ArrayList<Course>)
+ void partiallyRequiredJudgement(ArrayList<Course>)
+ void generalRequirement(ArrayList<Course>)
+ void PERequirement()
+ void summarize()
}
class STAT {
~ double REQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITSA
~ double PARTIALLYREQUIREDCREDITSB
~ double PARTIALLYREQUIREDCREDITSC
~ double TOTALCREDITS
~ double SELECTIVENEED
- ArrayList<Course> deptPartiallyRequired1
- ArrayList<Course> deptPartiallyRequired2
- ArrayList<Course> deptPartiallyRequired3
- ArrayList<Course> partiallyRequired1
- ArrayList<Course> partiallyRequired2
- ArrayList<Course> partiallyRequired3
~ double required
~ double partiallyRequiredCredits1
~ double partiallyRequiredCredits2
~ double partiallyRequiredCredits3
~ double selective
+ void addRequire(String)
+ void addPartiallyRequired()
+ void requiredJudgement(ArrayList<Course>)
+ void selectiveJudgement(ArrayList<Course>)
+ void partiallyRequiredJudgement(ArrayList<Course>)
+ void generalRequirement(ArrayList<Course>)
+ void PERequirement()
+ void summarize()
}
class Department {
+ {static} String UTF8_BOM
# ArrayList<Course> generalCourses
# ArrayList<Course> PE
# ArrayList<Course> requireds
# ArrayList<Course> deptRequired
# ArrayList<Course> selectives
# ArrayList<Course> partiallyRequireds
# ArrayList<Boolean> requirements
~ double generalCredits
~ double GENERALCREDITSNEEDED
~ double PECREDITSNEEDED
~ boolean graduationRequirement
~ double humanity
~ double society
~ double nature
~ double chinese
~ double english
~ double total
~ int coreNum
+ void requiredJudgement()
+ void selectiveJudgement()
+ void addRequire(String,ArrayList<Course>)
+ void addCourse(Course)
+ void PERequirement()
+ void generalRequirement(ArrayList<Course>)
+ boolean generalLimitRequirement(Course,double,double)
+ double generalLimitRequirement(Course,double,double,double)
+ void summarize()
+ void graduationResult()
- {static} String removeUTF8BOM(String)
}
class Course {
- String name
- double credits
- String category
- String subcateogry
+ <<Create>> Course(String,double)
+ <<Create>> Course(String,double,String,String)
+ <<Create>> Course(String,double,String)
+ String getName()
+ void setName(String)
+ String getCategory()
+ void setCategory(String)
+ String getSubcategory()
+ void setSubcategory(String)
+ double getCredits()
+ void setCredits(double)
}
class BA {
~ double REQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITS
~ double TOTALCREDITS
~ double SELECTIVENEED
- ArrayList<Course> deptPartiallyRequired
~ double required
~ double partiallyRequired
~ double selective
+ void addRequire(String)
+ void requiredJudgement(ArrayList<Course>)
+ void selectiveJudgement(ArrayList<Course>)
+ void generalRequirement(ArrayList<Course>)
+ void PERequirement()
+ void summarize()
}
class ACCT {
~ double REQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITSA
~ double PARTIALLYREQUIREDCREDITSB
~ double TOTALCREDITS
~ double SELECTIVENEED
- ArrayList<Course> deptPartiallyRequired1
- ArrayList<Course> deptPartiallyRequired2
- ArrayList<Course> partiallyRequired1
- ArrayList<Course> partiallyRequired2
~ double required
~ double partiallyRequiredCredits1
~ double partiallyRequiredCredits2
~ double selective
+ void addRequire(String)
+ void addPartiallyRequired()
+ void requiredJudgement(ArrayList<Course>)
+ void selectiveJudgement(ArrayList<Course>)
+ void partiallyRequiredJudgement(ArrayList<Course>)
+ void summarize()
+ void generalRequirement(ArrayList<Course>)
+ void PERequirement()
}
class MAB {
~ double REQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITSA
~ double PARTIALLYREQUIREDCREDITSB
~ double PARTIALLYREQUIREDCREDITSC
~ double PARTIALLYREQUIREDCREDITSF
~ double TOTALCREDITS
~ double SELECTIVENEED
- ArrayList<Course> deptPartiallyRequired1
- ArrayList<Course> deptPartiallyRequired2
- ArrayList<Course> deptPartiallyRequired3
- ArrayList<Course> deptPartiallyRequired4
- ArrayList<Course> partiallyRequired1
- ArrayList<Course> partiallyRequired2
- ArrayList<Course> partiallyRequired3
- ArrayList<Course> partiallyRequired4
~ double required
~ double partiallyRequiredCredits1
~ double partiallyRequiredCredits2
~ double partiallyRequiredCredits3
~ double partiallyRequiredCredits4
~ double selective
+ void requiredJudgement(ArrayList<Course>)
+ void selectiveJudgement(ArrayList<Course>)
+ void addRequire(String)
+ void addPartiallyRequired()
+ void partiallyRequiredJudgement(ArrayList<Course>)
+ void generalRequirement(ArrayList<Course>)
+ void PERequirement()
+ void summarize()
}
class RMI {
~ double REQUIREDCREDITS
~ double PARTIALLYREQUIREDCREDITS
~ double TOTALCREDITS
~ double SELECTIVENEED
- ArrayList<Course> deptPartiallyRequired
~ double required
~ double partiallyRequired
~ double selective
+ void addRequire(String)
+ void addPartiallyRequired()
+ void requiredJudgement(ArrayList<Course>)
+ void selectiveJudgement(ArrayList<Course>)
+ void partiallyRequiredJudgement(ArrayList<Course>)
+ void generalRequirement(ArrayList<Course>)
+ void PERequirement()
+ void summarize()
}


Department <|-- FIN
Department <|-- IB
Department <|-- MIS
Department <|-- STAT
Department <|-- BA
Department <|-- ACCT
Department <|-- MAB
Department <|-- RMI
@enduml